# CanvasTerminal

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO-ScriptNode-DataTransfer.md  TODO-ScriptNode-Evolution.md  TODO.md  canvas.cmd  gen_html.py  htmltest.json  window-state.json
.pi/skills/canvas-agent-events/: SKILL.md
assets/: init-canvas-terminal.ps1  starship.toml
assets/fonts/: README.md
assets/fonts/msdf/: README.md  atlas.json  charset.txt
docs/: automation-protocol.md  core.md  decision-node-mvp.md  gsd2-core-insights.md  html-node-mvp-spec.md  html-webview-focus-fix.md  msdf-dynamic-atlas-design.md  msdf-runtime-msdf-spike.md  msdf-text-rendering-followup-plan.md  msdf-text-rendering-plan.md  note_demo.html  script-node-v2-design.md  todo.md  total_todo.md
flow/: debug_script.json  git-worktree-feature-flow.json  novel_graph.json  program_graph.json
novel/: novel_graph.json
scripts/: build-canvas-cli-release.cmd  build-canvas-cli.cmd  e2e-smoke.cmd  gen_msdf_charset.py  package-all.cmd  package-canvas-agent-kit.cmd  package-canvas-app.cmd
src/: app.rs  constants.rs  event_protocol.rs  event_server.rs  fonts.rs  lib.rs  main.rs  model.rs  shell.rs
src/app/: automation.rs  automation_support.rs  chrome.rs  clipboard.rs  dirty.rs  editing.rs  geometry.rs  groups.rs  history.rs  html_runtime.rs  html_webview.rs  images.rs  menu.rs  nodes.rs  notifications.rs  performance.rs  persistence.rs  selection.rs  terminal.rs  ui.rs  workspace.rs
src/app/ui/: canvas.rs  canvas_complex_editors.rs  canvas_draw.rs  canvas_editors.rs  canvas_import.rs  canvas_interactions.rs  canvas_menu.rs  canvas_multiline_editor.rs  canvas_nodes_render.rs  canvas_render.rs  canvas_script_render.rs  mod.rs  panel.rs
src/msdf/: atlas.rs  debug_paint.rs  dynamic_atlas.rs  mod.rs  renderer.rs  shader.wgsl
src/script_node/: layout_render.rs  mod.rs  parser.rs  types.rs
src/script_node/lua/: api_ctx.rs  api_system.rs  mod.rs  sandbox.rs  state.rs  timer.rs
src/script_node/lua/tests/: feature_approve.rs  feature_dashboard.rs  feature_debug.rs  feature_display.rs  feature_empty_queue.rs  feature_errors.rs  feature_log.rs  feature_no_hardcode.rs  feature_notes.rs  feature_on_init.rs  feature_persistence.rs  feature_pomodoro.rs  feature_ports.rs  feature_queuing.rs  feature_reject.rs  feature_render_api.rs  feature_sandbox.rs  feature_timer.rs  mod.rs
