[package]
name = "egui_node_graph_mvp"
version = "0.1.0"
edition = "2021"
default-run = "egui_node_graph_mvp"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_commonmark = "0.20"
egui_term = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
ureq = { version = "2", features = ["json"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
arboard = "3"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
rfd = "0.15"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.38.4"
raw-window-handle = "0.6"
wry = { version = "0.55.1", default-features = false, features = ["os-webview", "protocol"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }

[patch.crates-io]
egui_term = { path = "vendor/egui_term" }
egui-winit = { path = "vendor/egui-winit" }
